force-app/main/default/objects/DispatcherException__c/DispatcherException__c.object-meta.xml
<CustomObject>
    <label>Dispatcher Exception</label>
    <nameField>
        <label>Dispatcher Exception Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dispatcher Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>