force-app/main/default/objects/DispatcherException__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Area</label>
    <referenceTo>Area__c</referenceTo>
    <relationshipName>Blockout_Days</relationshipName>
    <type>Lookup</type>
</CustomField>