force-app/main/default/objects/DispatcherException__c/fields/TimeFrame__c.field-meta.xml
<CustomField>
    <fullName>TimeFrame__c</fullName>
    <label>TimeFrame</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Morning</fullName>
                <label>Morning (9am - 2pm)</label>
            </value>
            <value>
                <fullName>Afternoon</fullName>
                <label>Afternoon (2pm - 6pm)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>