force-app/main/default/objects/DispatcherException__c/fields/UniqueField__c.field-meta.xml
<CustomField>
    <fullName>UniqueField__c</fullName>
    <label>Unique Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>