force-app/main/default/objects/DispatcherException__c/recordTypes/Available.recordType-meta.xml
<RecordType>
    <fullName>Available</fullName>
    <active>true</active>
    <label>Available</label>
</RecordType>