force-app/main/default/objects/DispatcherException__c/recordTypes/Block.recordType-meta.xml
<RecordType>
    <fullName>Block</fullName>
    <active>true</active>
    <label>Block</label>
</RecordType>